@@ -32,6 +32,7 @@
 - updated: `NEWOPERATION()` supports `repeat`, `stop` and `binderror` arguments (more in docs)
 - updated: routing, now it supports operations in the form `ROUTE('..  * --> @save_operation @load_operation (response)')`
 - updated: `ROUTE()` supports multiple HTTP method declaration `ROUTE('GET,POST,PUT /something/', action)`
+- updated: `ROUTE()` supports dynamic schemas
 - updated: `REQUEST()` can return binary data if the content-type is not `text/*` or `application/*`
 - updated: NoSQL joins support array values
 - updated: `ROUTING(id:|search, [flags])` method
